Updated the well class

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{
     </nav>
 
     <main class="container" id="mainContent">
-
+<div class="well">
         <h1>Welcome to Lesson 5</h1>
         <p id="firstParagraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et laboriosam illum perspiciatis voluptatibus odio officia
             iste ex voluptas accusamus enim quo rem ducimus aliquid veniam, consectetur doloribus, error praesentium minus.
@@ -57,7 +57,7 @@ html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{
             Aperiam adipisci beatae odio error animi nam ducimus voluptatem alias itaque voluptate perferendis quasi porro
             commodi distinctio aliquid doloribus eveniet, magnam, quod deserunt dicta voluptatibus repellendus. Quos tempore
             minus labore excepturi, voluptates accusantium culpa natus ab dolorem necessitatibus totam quasi pariatur quidem.</p>
-
+</div>
     </main>
 
 
