--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@ html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                
+
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active"><a href="#">About Me</a></li>
                     <li><a href="#">My Projects</a></li>
                     <li><a href="#">Contact Me</a></li>
-                    
+
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -48,16 +48,17 @@ html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{
     </nav>
 
     <main class="container" id="mainContent">
-<div class="well">
-        <h1>Welcome to Lesson 5</h1>
-        <p id="firstParagraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et laboriosam illum perspiciatis voluptatibus odio officia
-            iste ex voluptas accusamus enim quo rem ducimus aliquid veniam, consectetur doloribus, error praesentium minus.
-            Aut qui ipsum laborum doloremque repudiandae officiis consequuntur velit magni, error aliquid deleniti suscipit
-            iste, quas aspernatur commodi possimus est quos blanditiis nostrum voluptatibus dolorum autem expedita temporibus.
-            Aperiam adipisci beatae odio error animi nam ducimus voluptatem alias itaque voluptate perferendis quasi porro
-            commodi distinctio aliquid doloribus eveniet, magnam, quod deserunt dicta voluptatibus repellendus. Quos tempore
-            minus labore excepturi, voluptates accusantium culpa natus ab dolorem necessitatibus totam quasi pariatur quidem.</p>
-</div>
+        <div class="well">
+            <h1>Welcome to Lesson 5</h1>
+            <p id="firstParagraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et laboriosam illum perspiciatis voluptatibus odio
+                officia iste ex voluptas accusamus enim quo rem ducimus aliquid veniam, consectetur doloribus, error praesentium
+                minus. Aut qui ipsum laborum doloremque repudiandae officiis consequuntur velit magni, error aliquid deleniti
+                suscipit iste, quas aspernatur commodi possimus est quos blanditiis nostrum voluptatibus dolorum autem expedita
+                temporibus. Aperiam adipisci beatae odio error animi nam ducimus voluptatem alias itaque voluptate perferendis
+                quasi porro commodi distinctio aliquid doloribus eveniet, magnam, quod deserunt dicta voluptatibus repellendus.
+                Quos tempore minus labore excepturi, voluptates accusantium culpa natus ab dolorem necessitatibus totam quasi
+                pariatur quidem.</p>
+        </div>
     </main>
 
 
